Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18006

Line information potentially wrong for dynamic slots in .qml files

    XMLWordPrintable

Details

    • f386c778d173

    Description

      dynamic slots defined in .qml can end up having the wrong line information attached in Qt. E.g. for

      1: function f()
      2:
      3: {
      4:   i += 1;
      5: }
      

      the JavaScript engine will report that the 'i+=1' line is in line 2, since any line breaks before the opening bracket are silently discarded in the parser.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkohne Kai Köhne
              kkohne Kai Köhne
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes