Fix line information for dynamic slots in .qml files

Take whitespace before the opening bracket into account, e.g. save the newlines
in function f()\n{}

Task-number: QTBUG-18006
Done by Roberto Raggi